<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/reg_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/please_enter_your_details"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp" />

    <EditText android:id="@+id/Fname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:background="@drawable/text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/reg_details"
        app:layout_constraintTop_toBottomOf="@+id/reg_details"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="@string/first_name" />


    <EditText
        android:id="@+id/Lname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_bg"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/reg_details"
        app:layout_constraintTop_toBottomOf="@+id/reg_details"
        app:layout_constraintVertical_bias="0.141"
        android:autofillHints="@string/last_name" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_bg"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/reg_details"
        app:layout_constraintTop_toBottomOf="@+id/reg_details"
        app:layout_constraintVertical_bias="0.276"
        android:autofillHints="@string/reg_email" />

    <EditText
        android:id="@+id/ID"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/last_name"
        android:background="@drawable/text_bg"
        android:hint="@string/id_no_reg"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/reg_details"
        app:layout_constraintTop_toBottomOf="@+id/reg_details"
        app:layout_constraintVertical_bias="0.413" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regButton"
        app:layout_constraintVertical_bias="0.333" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="@+id/reg_details"
        app:layout_constraintTop_toBottomOf="@+id/reg_details"
        app:layout_constraintVertical_bias="0.532"
        android:textColorHint="@color/black"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_ulit"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="20sp"
            android:background="@drawable/text_bg"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="441dp" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>